--- a/README.Rmd
+++ b/README.Rmd
@@ -16,9 +16,10 @@ knitr::opts_chunk$set(
 # roev: Rates of Evolution
 
 <!-- badges: start -->
+[![R-CMD-check](https://github.com/benmarwick/roev/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/benmarwick/roev/actions/workflows/R-CMD-check.yaml)
 <!-- badges: end -->
 
-The goal of roev is to provide functions for analysing and visualizing rates of evolution following the methods in Philip D. Gingerich's book 'Rates of Evolution: A Quantitative Synthesis' <https://doi.org/10.1017/9781316711644>. The R code and data files included here were originally deposited by Gingerich at Dryad <https://doi.org/10.5061/dryad.1tn7123> and adapted for use by Ben Marwick.
+The goal of roev is to provide functions for analysing and visualizing rates of evolution following the methods in Philip D. Gingerich's 2019 book _Rates of Evolution: A Quantitative Synthesis_ <https://doi.org/10.1017/9781316711644>. The R code and data files included here were originally deposited by Gingerich at Dryad <https://doi.org/10.5061/dryad.1tn7123> and adapted for use by Ben Marwick.
 
 ## Installation
 
@@ -29,9 +30,139 @@ if (!require("remotes")) install.packages("remotes")
 remotes::install_github("benmarwick/roev")
 ```
 
+## Simple example
+
+Here is a very simple example based on Gingerich's case studies. To compute rates of evolution following Gingerich, we need a data frame that includes a time variable, a mean variable, a standard deviation variable, and a number of samples variable. Here's some example data: 
+
+```{r echo=FALSE}
+x <- 
+structure(list(time = c(700L, 720L, 740L, 760L, 780L, 800L, 
+820L, 840L, 860L, 880L, 900L, 920L, 940L, 960L, 980L, 1000L, 
+1020L, 1040L, 1060L, 1080L, 1100L, 1120L), mean = c(3.44187805731812e-06, 
+3.27825414413307e-06, 4.24268073890435e-06, 4.04332481955603e-06, 
+4.50448824625215e-06, 5.298666326338e-06, 7.41448955982227e-06, 
+7.35933936944734e-06, 9.05847804602288e-06, 6.85417214108449e-06, 
+6.33589377492861e-06, 7.34485412929101e-06, 6.8437428686227e-06, 
+7.39302534961651e-06, 9.93109616304913e-06, 8.81400013995889e-06, 
+1.17599354233188e-05, 1.3982155628399e-05, 1.40856679511196e-05, 
+1.58533104058636e-05, 1.7239406778685e-05, 1.64160079058196e-05
+), sd = c(9.74618013876375e-06, 1.16885928294399e-05, 2.19419810861125e-05, 
+1.38389353487857e-05, 1.57798009176957e-05, 2.02416584433667e-05, 
+3.08436252158886e-05, 2.93480512357231e-05, 3.56653324350713e-05, 
+2.39785307855491e-05, 3.2853251995622e-05, 4.95929051599991e-05, 
+2.86987458417589e-05, 3.25705994883241e-05, 6.25182995861831e-05, 
+3.02135375839046e-05, 5.20481627405739e-05, 5.25673524278103e-05, 
+4.85392160978728e-05, 6.10687498819241e-05, 5.76710964265358e-05, 
+5.65462448912747e-05), n = c(29L, 173L, 182L, 197L, 190L, 196L, 
+239L, 231L, 250L, 219L, 219L, 170L, 177L, 206L, 203L, 206L, 302L, 
+317L, 343L, 331L, 370L, 443L)), class = "data.frame", row.names = c(NA, 
+22L))
+```
+
+```{r echo=FALSE}
+knitr::kable(x)
+```
+
+Next we prepare an empty matrix to hold the rates calculations. It's important that the columns are in the order of time-mean-sd-n, and that these are the first four columns in the data frame. The column names are not important. 
+
+```{r}
+# our input data frame is called x
+
+n = length(x[,2])        # get the number of rows (measurements)
+nn = 0.5 * (n-1) * n     # get the number of pairwise comparisons
+
+idr = matrix(nrow = nn,
+             ncol = 9)   # create an empty matrix with 9 columns
+
+# set the column names of our empty matrix
+colnames(idr) = c('int',
+                  'diff.sd',
+                  'rate.sd',
+                  'log.i',
+                  'log.d',
+                  'log.r',
+                  'sbn',
+                  'wgt',
+                  'sum')
+```
+
+Next we loop over the input data to compute the rates of change and fill the matrix with the results. Here we are using the `PoolSD` function from the roev package, the rest is base R. 
+
+```{r}
+# populate the empty matrix with rate calculations
+nc = 0
+stdev <- numeric(length = n - 1)
+
+for (k in 1:(n - 1)){                           # run length
+  for (i in 1:(n - k)){                         # starting position
+    nc = nc + 1
+    idr[nc, 1] = k						                  # intercept
+    meandiff = x[(i + k), 2] - x[i, 2]			    # mean diff.
+    poolsd = roev::PoolSD(x[i + k, 4], x[i, 4], x[i + k, 3], x[i, 3])
+    idr[nc, 2] = meandiff/poolsd			      		# diff.sd
+    idr[nc, 3] = idr[nc, 2] / idr[nc, 1]		  	# rate.sd
+    idr[nc, 4] = log10(idr[nc, 1])			      	# log.i
+    idr[nc, 5] = log10(abs(idr[nc, 2]))		  		# log.d
+    idr[nc, 6] = log10(abs(idr[nc, 3]))			  	# log.r
+    if(idr[nc, 1] == 1){idr[nc, 7] = 1} else {idr[nc, 7] = 3}	# sbn
+    idr[nc, 8] = 1 / idr[nc, 1]				        	# wgt
+    idr[nc, 9] = idr[nc, 4] + idr[nc, 6]		  	# sum
+    stdev[i] = poolsd
+  }
+}
+
+idrx1 = idr[!rowSums(!is.finite(idr)), ]  # remove rows that have -Inf
+```
+
+Now we are ready to plot the Log rate versus log interval (LRI) analysis of the time series with circles representing rates for corresponding intervals. This is the distinctive plot in all of Gingerich's case studies. It is important because it provides the output of the robust linear regressions, which can be used for interpreting if the rate of evolution is random, stationary or directional. The robust regression is computed using `rlm` from the MASS package. Confidence intervals for the slope and intercept are computed by bootstrapping, resulting in a stable median and a representative confidence interval. 
+
+```{r fig.width=8, fig.height=8}
+
+plot(c(-5, 8),   # set up plot, some trial and error required here
+     c(-5, 8),				
+     type = 'n',
+     xaxt = 'n',
+     yaxt = 'n',
+     axes = FALSE,
+     ann = FALSE,
+     asp = 1) 		# aspect ratio (y/x))
+
+bootresultd = roev::TriPanelBC(idrx1,     # idrx matrix
+                               "r",       # mode (diff/rate)
+                               -3,         # panel placement coordinate x
+                               3,         # panel placement coordinate y
+                               1000,      # number of bootstrap replications
+                               "all",     # 'mode' as "medians","all","mixed"
+                               2,         # circle size for points (1.5 or 2)
+                               "normal")  # 'equation' position as "normal","lower","none"
+                                 
+```      
+
+
+```{r}
+# extract some values to use inline in text about the plot
+
+slope_max <- round(bootresultd[[1]][1], 3)
+slope_med <- round(bootresultd[[1]][2], 3)
+slope_min <- round(bootresultd[[1]][3], 3)
+```
+
+
+In the example above, we see a median slope of `r slope_med`, and a confidence interval for the slope of `r slope_min` to `r slope_max`. 
+
+Here's the key to interpreting the LRI plot above (from Gingerich 2019:109)
+
+- Random time series have differences that scale with a slope at or near 0.500 on a log difference versus log interval or LDI plot. The corresponding rates scale with a slope at or near -0.500 on a log rate versus log interval or LRI plot.
+
+- Stationary time series have differences that scale with a slope at or near 0.000 on an LDI plot. The corresponding rates scale with a slope at or near -1.000 on an LRI plot.
+
+- Directional time series have differences that scale with a slope at or near 1.000 on an LDI plot. The corresponding rates scale with a slope at or near 0.000 on an LRI plot.
+
+Thus for the example data above, the median slope lies between expectation for directional change and random change, and is significantly different from both. The more negative confidence limit excludes both -1.000 expected for stasis and -0.500 expected for a random time series, and the more positive limit excludes 0.000 expected for a directional time series. Thus the time series is interpreted as directional with a random component (cf. Gingerich 2019:142).
+
 ## Examples from 'Rates of Evolution: A Quantitative Synthesis'
 
-Here are a few examples from Gingerich's book. The code is almost exactly as he wrote it, taken from the Dryad repository for the book, I have only slightly simplified the code in a few places. Because of the distinctive way that Gingerich builds up the final plot with many different base plot functions, all code has to be in one block to work correctly in an R Markdown document. His original code and data files for all the case studies in the book are included here in the `data-raw` folder.
+Here are a few complete case studies from Gingerich's book. The code is almost exactly as he wrote it, taken from the Dryad repository for the book, I have only slightly simplified the code in a few places. Because of the distinctive way that Gingerich builds up the final plot with many different base plot functions, all code has to be in one block to work correctly in an R Markdown document. His original code and data files for all the case studies in the book are included here in the `data-raw` folder.
 
 ### Example using a Field Study: Size of Snow Geese at La Pérouse Bay, Manitoba
 
@@ -997,6 +1128,6 @@ bootresultr = PalPanelBC(idrx[, 1:8], "r", 13, 4.5, bootn, mode, psize, "normal"
 
 Here is the original caption for this figure from the book: "Rates of evolution in two Miocene merycoidodont mammal lineages spanning five million years of geological time. (a) Time-calibrated stratophenetic graph of species in the lineages analyzed by Bader (1955). Independent variable, time, is plotted on the vertical or y axis. The base of each normal curve spans +/-3 standard deviations. (b) Log-difference-interval LDI plot for 23 measurements showing that differences between species scale with a slope (0.086) close to that expected for a stationary time series (0.000). The slope is significantly different from expectation for both random and directional change. (c) Log-rate-interval LRI plot shows that rates of change scale with a slope (-0.914) close to that expected for a stationary time series (-1.000). This slope too is significantly different from expectations for both random and directional change. Intercepts in (b) and (c) are the same; both have wide 95% confidence intervals approaching a span of two orders of magnitude (open triangles)."
 
- ## Code of Conduct
+## Code of Conduct
   
   Please note that the roev project is released with a [Contributor Code of Conduct](https://contributor-covenant.org/version/2/1/CODE_OF_CONDUCT.html). By contributing to this project, you agree to abide by its terms.
