add a data prep function to simplify the simple example even more

--- a/README.Rmd
+++ b/README.Rmd
@@ -63,63 +63,18 @@ structure(list(time = c(700L, 720L, 740L, 760L, 780L, 800L,
 knitr::kable(x)
 ```
 
-Next we prepare an empty matrix to hold the rates calculations. It's important that the columns are in the order of time-mean-sd-n, and that these are the first four columns in the data frame. The column names are not important. 
+Next we prepare our data for analysis of rates. It's important that the first four columns of our input data are in the order of time-mean-sd-n. The column names are not important, but it is important that these are the first four columns in the data frame.  
 
 ```{r}
-# our input data frame is called x
-
-n = length(x[,2])        # get the number of rows (measurements)
-nn = 0.5 * (n-1) * n     # get the number of pairwise comparisons
-
-idr = matrix(nrow = nn,
-             ncol = 9)   # create an empty matrix with 9 columns
-
-# set the column names of our empty matrix
-colnames(idr) = c('int',
-                  'diff.sd',
-                  'rate.sd',
-                  'log.i',
-                  'log.d',
-                  'log.r',
-                  'sbn',
-                  'wgt',
-                  'sum')
+idrx1 <- roev::DataPrep(x)
 ```
 
-Next we loop over the input data to compute the rates of change and fill the matrix with the results. Here we are using the `PoolSD` function from the roev package, the rest is base R. 
-
-```{r}
-# populate the empty matrix with rate calculations
-nc = 0
-stdev <- numeric(length = n - 1)
-
-for (k in 1:(n - 1)){                           # run length
-  for (i in 1:(n - k)){                         # starting position
-    nc = nc + 1
-    idr[nc, 1] = k						                  # intercept
-    meandiff = x[(i + k), 2] - x[i, 2]			    # mean diff.
-    poolsd = roev::PoolSD(x[i + k, 4], x[i, 4], x[i + k, 3], x[i, 3])
-    idr[nc, 2] = meandiff/poolsd			      		# diff.sd
-    idr[nc, 3] = idr[nc, 2] / idr[nc, 1]		  	# rate.sd
-    idr[nc, 4] = log10(idr[nc, 1])			      	# log.i
-    idr[nc, 5] = log10(abs(idr[nc, 2]))		  		# log.d
-    idr[nc, 6] = log10(abs(idr[nc, 3]))			  	# log.r
-    if(idr[nc, 1] == 1){idr[nc, 7] = 1} else {idr[nc, 7] = 3}	# sbn
-    idr[nc, 8] = 1 / idr[nc, 1]				        	# wgt
-    idr[nc, 9] = idr[nc, 4] + idr[nc, 6]		  	# sum
-    stdev[i] = poolsd
-  }
-}
-
-idrx1 = idr[!rowSums(!is.finite(idr)), ]  # remove rows that have -Inf
-```
-
-Now we are ready to plot the Log rate versus log interval (LRI) analysis of the time series with circles representing rates for corresponding intervals. This is the distinctive plot in all of Gingerich's case studies. It is important because it provides the output of the robust linear regressions, which can be used for interpreting if the rate of evolution is random, stationary or directional. The robust regression is computed using `rlm` from the MASS package. Confidence intervals for the slope and intercept are computed by bootstrapping, resulting in a stable median and a representative confidence interval. 
+Now we are ready to plot the Log rate versus log interval (LRI) analysis of the time series with circles representing rates for corresponding intervals. This is the distinctive plot in all of Gingerich's case studies. It is important because it provides the output of the robust linear regressions. It's the slope on these regressions that allows us to determine if the rate of evolution is random, stationary or directional. Confidence intervals for the slope and intercept are computed by bootstrapping, resulting in a stable median and a representative confidence interval. 
 
 ```{r fig.width=8, fig.height=8}
 
-plot(c(-5, 8),   # set up plot, some trial and error required here
-     c(-5, 8),				
+plot(c(-5, 8),   # set up plot 
+     c(-5, 8),	 # some trial and error required here		
      type = 'n',
      xaxt = 'n',
      yaxt = 'n',
@@ -129,7 +84,7 @@ plot(c(-5, 8),   # set up plot, some trial and error required here
 
 bootresultd = roev::TriPanelBC(idrx1,     # idrx matrix
                                "r",       # mode (diff/rate)
-                               -3,         # panel placement coordinate x
+                               -3,        # panel placement coordinate x
                                3,         # panel placement coordinate y
                                1000,      # number of bootstrap replications
                                "all",     # 'mode' as "medians","all","mixed"
